--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo-light.png" width="64" height="24" alt="Ganesh Kambli home">
+        <img src="./assets/images/logo-light.svg" width="64" height="24" alt="Ganesh Kambli home">
       </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="./assets/images/logo-dark.png" width="64" height="24" alt="Ganesh Kambli home">
+            <img src="./assets/images/logo-dark.svg" width="64" height="24" alt="Ganesh Kambli home">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -352,7 +352,7 @@
               <div class="project-card project-card-5" style="background-color: #f8f5fb">
                 <div class="card-content" data-reveal="left">
                   <p class="card-tag" style="color: #a07cc5">Web Development</p>
-                  <h3 class="h3 card-title">Certificate Generator</h3>
+                  <h3 class="h3 card-title">Certificate Generation Application</h3>
                   <p class="card-text">
                     A Flask-based web app for bulk certificate generation using custom templates, supporting PDF and image templates, font customization, and bulk ZIP downloads.
                   </p>
@@ -389,7 +389,7 @@
               <h2 class="h2 section-title">If you like what you see, let's work together.</h2>
 
               <p class="section-text">
-                I bring rapid solutions to make the life of my clients easier. Have any questions? Reach out to me from this contact form and I will get back to you shortly.
+                 Have any questions? Reach out to me from this contact form and I will get back to you shortly.
               </p>
 
             </div>
@@ -423,7 +423,7 @@
     <div class="container">
 
       <p class="copyright">
-        © 2025 ganeshk69. All rights reserved.
+        © 2025 ganesh k. All rights reserved.
       </p>
 
       <ul class="social-list">
