--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="./assets/images/favicon.svg" type="image/svg+xml">
+
 
   <!--
     - google font link
@@ -80,6 +81,12 @@
 
         <div class="wrapper">
           <a href="mailto:gkambli403@gmail.com" class="contact-link">gkambli403@gmail.com</a>
+
+          <!-- Dark Mode Toggle Button -->
+          <button class="theme-toggle-btn" aria-label="Toggle theme" data-theme-toggler>
+            <ion-icon name="sunny-outline" aria-hidden="true" class="sun-icon"></ion-icon>
+            <ion-icon name="moon-outline" aria-hidden="true" class="moon-icon"></ion-icon>
+          </button>
         </div>
 
         <ul class="social-list">
@@ -126,7 +133,7 @@
             </h1>
 
             <p class="section-text" data-reveal="top" data-reveal-delay="0.75s">
-              Hello! I'm Ganesh Kambli, a third-year Computer Engineering student passionate about software development, data science, and machine learning. I thrive on building innovative solutions that leverage AI to tackle complex challenges.
+              Hello! I'm Ganesh Kambli, a third-year Computer Engineering student with a deep passion for software development, data science, and machine learning. I am driven by a commitment to building innovative solutions that harness the power of AI to solve complex, real-world challenges.
             </p>
 
             <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s">
@@ -169,7 +176,7 @@
               <li class="progress-item">
                 <div class="label-wrapper">
                   <p>Web Development</p>
-                  <span class="span">80 %</span>
+                  <span class="span">70 %</span>
                 </div>
                 <div class="progress">
                   <div class="progress-fill" style="width: 80%; background-color: #8caeec"></div>
@@ -196,7 +203,7 @@
               <li class="progress-item">
                 <div class="label-wrapper">
                   <p>AI & ML</p>
-                  <span class="span">60 %</span>
+                  <span class="span">55 %</span>
                 </div>
                 <div class="progress">
                   <div class="progress-fill" style="width: 60%; background-color: #d16b86"></div>
@@ -332,35 +339,35 @@
               <div class="project-card project-card-4" style="background-color: #fcf4f6">
                 <div class="card-content" data-reveal="left">
                   <p class="card-tag" style="color: #d16b86">Web Development</p>
-                  <h3 class=\"h3 card-title\">Open Source License Detector</h3>
-                  <p class=\"card-text\">
+                  <h3 class="h3 card-title">Open Source License Detector</h3>
+                  <p class="card-text">
                     A Flask-based web app that detects open-source licenses in .txt and .md files, helping developers ensure compliance.
                   </p>
-                  <a href=\"https://github.com/Ganesh-403/Open-Source-License-Detection\" class=\"btn-text\" style=\"color: #d16b86\">
-                    <span class=\"span\">See Project</span>
-                    <ion-icon name=\"arrow-forward-outline\" aria-hidden=\"true\"></ion-icon>
+                  <a href="https://github.com/Ganesh-403/Open-Source-License-Detection" class="btn-text" style="color: #d16b86">
+                    <span class="span">See Project</span>
+                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
                 </div>
-                <figure class=\"card-banner\" data-reveal=\"right\">
-                  <img src=\"./assets/images/project-4.png\" width=\"620\" height=\"370\" loading=\"lazy\" alt=\"Open Source License Detector\" class=\"w-100\">
+                <figure class="card-banner" data-reveal="right">
+                  <img src="./assets/images/project-4.png" width="620" height="370" loading="lazy" alt="Open Source License Detector" class="w-100">
                 </figure>
               </div>
             </li>
             <li>
-              <div class=\"project-card project-card-5\" style=\"background-color: #f8f5fb\">
-                <div class=\"card-content\" data-reveal=\"left\">
-                  <p class=\"card-tag\" style=\"color: #a07cc5\">Web Development</p>
-                  <h3 class=\"h3 card-title\">Certificate Generation Application</h3>
-                  <p class=\"card-text\">
+              <div class="project-card project-card-5" style="background-color: #f8f5fb">
+                <div class="card-content" data-reveal="left">
+                  <p class="card-tag" style="color: #a07cc5">Web Development</p>
+                  <h3 class="h3 card-title">Certificate Generation Application</h3>
+                  <p class="card-text">
                     A Flask-based web app for bulk certificate generation using custom templates, supporting PDF and image templates, font customization, and bulk ZIP downloads.
                   </p>
-                  <a href=\"https://github.com/Ganesh-403/Bulk-Certificate-Generation-Web-Application\" class=\"btn-text\" style=\"color: #a07cc5\">
-                    <span class=\"span\">See Project</span>
-                    <ion-icon name=\"arrow-forward-outline\" aria-hidden=\"true\"></ion-icon>
+                  <a href="https://github.com/Ganesh-403/Bulk-Certificate-Generation-Web-Application" class="btn-text" style="color: #a07cc5">
+                    <span class="span">See Project</span>
+                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
                 </div>
-                <figure class=\"card-banner\" data-reveal=\"right\">
-                  <img src=\"./assets/images/project-5.png\" width=\"650\" height=\"370\" loading=\"lazy\" alt=\"Certificate Generator\" class=\"w-100\">
+                <figure class="card-banner" data-reveal="right">
+                  <img src="./assets/images/project-5.png" width="650" height="370" loading="lazy" alt="Certificate Generator" class="w-100">
                 </figure>
               </div>
             </li>
